# logen

./: .gitignore  Cargo.toml  README.md  app.yaml  awesome.md  interesting.md  logen.default.yaml  tasks.md  todo.md
assets/: example.yaml  logen.config.example.yaml
playground/: docker-compose.base.yaml  docker-compose.yml  http_ca.crt
playground/elk/: .env  autoscaling.rest  chaos.rest  docker-compose.cluster.yml  docker-compose.yml  elk.txt
playground/elk/js/: main.js  package-lock.json  package.json
playground/elk/logstash/config/: demo.conf
playground/proxy/: build.sh  pom.xml
playground/proxy/src/main/java/com/example/proxy/: ProxyApplication.java
src/: app.rs  assets.rs  cfg.rs  cli.rs  config.rs  def.rs  lib.rs  logen.rs  main.rs  template.rs  timestamp.rs
src/app/: mod.rs  simple.rs
src/appender/: console.rs  file.rs  mod.rs
src/appenders/: console.rs  file.rs  mod.rs
src/apps/: mod.rs  simple.rs
src/base/: level.rs  mod.rs  output.rs  tpl.rs  ts.rs
src/ctx/: app.rs  line.rs  logger.rs  message.rs  mod.rs  timestamp.rs
src/fmt/: bunyan.rs  flat.rs  json.rs  mod.rs
src/formatter/: flat.rs  json.rs  mod.rs
src/logger/: message.rs  mod.rs
src/util/: mod.rs  rand.rs  teras.rs  text.rs
