[package]
name = "logen"
author = "Yiting Qiang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[profile.dev]
#panic = "unwind"

#[profile.release]
#panic = "unwind"

[dependencies]
clap = { version = "3.2.5", features = ["derive", "cargo", "env", "regex", "unicode", "wrap_help"] }
chrono = { version = "0.4.19", features = ["serde"] }
lazy_static = "1.4.0"
anyhow = "1.0.58"
rand = "0.8.5"
rust-embed="6.4.0"
serde = {version = "1.0.137", features = ["derive"]}
serde_yaml = "0.8.24"
serde_json = "1.0.81"
tera = "1.16.0"
thiserror = "1.0.31"
